--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
 
     <artifactId>jsgames</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <name>JSGames Plugin</name>
     <description>Play some JavaScript games from the comfort of your Jenkins instance.</description>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/JSGames+Plugin</url>
